2009-12-28  Murray Cumming  <murrayc@murrayc.com>

	Fix the build.

	* glom/mode_design/print_layouts/print_layout_toolbar.cc:
	* glom/utility_widgets/layouttoolbar.cc: Do not include individual GTK+ headers.

2009-12-17  Murray Cumming  <murrayc@murrayc.com>

	Use GtkToolPalette instead of EggToolPalette.

	* Makefile_libegg.am:
	* glom/utility_widgets/egg/: Removed.
	* Other files: Use GtkToolPalette instead of EggToolPalette. 
	Seems to work.

2009-12-14  Murray Cumming  <murrayc@murrayc.com>

	* glom.desktop.in.in: Remove the Application category because 
	krazy2 says it is deprecated.

2009-12-10  Murray Cumming  <murrayc@murrayc.com>

	FlowTableDnd: Some refactoring.

	* glom/utility_widgets/flowtable_dnd.[h|cc],
	* glom/mode_data/flowtable_withfields.[h|cc]: Make FlowTableDnd less 
	aware of LayoutItems, though it is still not yet generic enough.
	* glom/utility_widgets/test_flowtable_dnd.cc:
	* glom/Makefile_tests.am: Added test_flowtable_dnd.

2009-12-10  Murray Cumming  <murrayc@murrayc.com>

	* examples/example_film_manager.glom: Added silly example data, 
	fixing bug #600859 (Michael Hasselmann)

2009-12-10  Murray Cumming  <murrayc@murrayc.com>

	Tests: Validate all examples against the DTD, and correct the DTD.

	* tests/dtd/test_example_sqlite: Renamed to test_file_validation.sh.
	* glom/Makefile_tests.am: Adapted.
	* glom/libglom/document/document.cc: save_before(): Correct the saving 
	of group privileges so they are really inside the group nodes. Avoid 
	saving unnamed groups, as seen in the example files.
	* glom/glom_document.dtd: Several corrections to fix the validation of 
	the example files, though I don't like that DTDs don't seem to give 
	us any way to say that the sequence of child elements is irrelevant. 
	I don't like enforcing the sequence.

2009-12-10  Murray Cumming  <murrayc@murrayc.com>

	Fix distcheck.

	* Makefile.am:
	* Makefile_tests.am: Fix the distcheck by disting the DTD validation 