@@ -1,5 +1,13 @@
 2009-12-28  Murray Cumming  <murrayc@murrayc.com>
 
+  Print Layouts: Avoid crash when closing the editing window.
+  
+	* glom/print_layout/canvas_print_layout.cc: get_print_layout():
+	Avoid a crash when m_page_setup is null, though we need to find out why it 
+	is null.
+
+2009-12-28  Murray Cumming  <murrayc@murrayc.com>
+
 	Fix the build.
 
 	* glom/mode_design/print_layouts/print_layout_toolbar.cc:
